...
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_required_eventName" />

        </android.support.design.widget.TextInputLayout>

...
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/column_required_eventDate" />

            </android.support.design.widget.TextInputLayout>
            <ImageButton
...
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_startTime"
                    android:inputType="time" />

...
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_endTime"
                    android:inputType="time" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:id="@+id/editCategory">

            <RadioButton
                android:id="@+id/radio_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/category_move" />

            <RadioButton
                android:id="@+id/radio_sightseeing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sightseeing" />

            <RadioButton
                android:id="@+id/radio_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_eat" />

            <RadioButton
                android:id="@+id/radio_stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_stay" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_other" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_memo" />

        </android.support.design.widget.TextInputLayout>

...
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_address" />

        </android.support.design.widget.TextInputLayout>

...
