...

    <!-- 各ページのタイトル -->
    <string name="title_planList">プラン一覧</string>
    <string name="title_planAdd">プラン作成</string>
    <string name="title_planEdit">プランの編集画面</string>
    <string name="title_eventList">イベント一覧</string>
    <string name="title_eventAdd">イベントの新規作成</string>
    <string name="title_eventEdit">イベントの編集画面</string>
    <string name="title_eventReference">イベントの参照画面</string>

    <!-- エラーメッセージ -->
    <string name="msg_error_0001">必須項目を入力してください</string>
    <string name="msg_error_0002">日付形式で入力してください</string>
    <string name="msg_error_0003">出発日以降の日付を入力してください</string>
    <string name="msg_error_0004">最終日以前の日付を入力してください</string>

    <!-- ワーニングメッセージ -->
    <string name="msg_warning_0001">プランを削除します。よろしいですか？</string>
    <string name="msg_warning_0002">イベントを削除します。よろしいですか？</string>

    <string-array name="person_number_array">
...
