<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">
        <!--        android:layout_marginBottom=""
            android:layout_marginLeft=""
            android:layout_marginRight=""
            android:layout_marginTop="" -->

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack" />
                <!--             android:paddingBottom=""
    android:paddingTop=""-->
                <!-- android:textSize="" -->

                <TextView
                    android:id="@+id/textView_period2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    android:textColor="@color/colorBlack" />
                <!--             android:textSize=""-->

                <TextView
                    android:id="@+id/textView_endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_category"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/textView_eventName"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />
            <!--                 android:layout_marginLeft=""
android:layout_marginRight="" -->
            <!-- android:textSize="" -->


            <ImageView
                android:id="@+id/imageView_memo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                />

            <ImageView
                android:id="@+id/imageView_link"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                />
            <!--             android:textSize="" -->

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>